# swell

./: .gitignore  LICENSE  README.md  SHORTCUT_SYSTEM.md  VISUAL_TESTING_SUMMARY.md  alignment-demo.html  biome.json  components.json  demo.html  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tailwind.config.ts  test-dock-demo.html  test-visual-demo.sh  vite.config.js  vite.config.ts
.github/: copilot-instructions.md
.github/workflows/: copilot-setup-steps.yml  deploy.yml  tauri-release.yml  test.yml
backend/: Cargo.toml  README.md
backend/src/: hierarchy.rs  lib.rs  lib_.rs  wcp.rs
backend/tests/: integration_test.rs
dist-test/swell/: index.html
docs/: CHECKBOX_FEATURE.md  CHECKBOX_FEATURE_VISUAL.md  COMMAND_PALETTE.md  CONTEXT_MENU.md  ICONIFY.md  IMPLEMENTATION_SUMMARY.md  SETTINGS.md  THEME_IMPLEMENTATION.md  TIMELINE_AS_SIGNAL.md  TREE_VIEW_FILTERING.md  UNDO_BATCH_OPERATIONS.md
examples/: README.md
src/: app.css  app.html  backend.js  backend.test.ts  backend.ts  backend_or_native.js  iconify-demo.html  iconify.test.ts  index.html  main.js  main.ts  menu-api.test.ts  menu-api.ts  settings-demo.html  styles.css  test-setup.ts  theme-manager.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/backend/: backend.test.ts  backend.ts  index.ts
src/components/: about-dialog.css  about-dialog.test.ts  about-dialog.ts  about-pane.css  about-pane.test.ts  about-pane.ts  alert-dialog.ts  app-main.css  app-main.test.ts  app-main.ts  command-manager.test.ts  (+43 more)
tests/: README.md  visual-regression.spec.ts
(+305 files in other folders)
