[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
wellen = "0.14.3"
wasm-bindgen-futures = "0.4"

serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"


[dependencies.web-sys]
version = "0.3.77"
features = [
  "File"
]
